--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/analytics": "^0.6.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "dotenv": "^8.2.0",
+    "firebase": "^7.24.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-firebase-hooks": "^2.2.0",
     "react-scripts": "3.4.4"
   },
   "scripts": {
